connect to firebase. Successfully stores data.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FindLaptopOwner"
         tools:targetApi="31">
+
+        <activity android:name=".ShowQRCodeActivity"></activity>
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
